fix: :bug: Contact form previously inaccessible because of z-index
Given the wrong z-index to bg_slices cause the form to inherit it and thus not being accessible even if still visible.

Form contact

--- a/src/styles/Form.module.css
+++ b/src/styles/Form.module.css
@@ -29,9 +29,7 @@
 .bg_slices_container > img {
     z-index: -1;
 }
-.bg_slices {
-    z-index: -1;
-}
+
 .bg_slices::before {
     content: "";
     background-color: white;
@@ -40,5 +38,4 @@
     left: 0;
     width: 100%;
     height: 40%;
-    z-index: -1;
 }
